themes/clouds/style.css
/* ... */
.sublinks_table {
border:solid #999 1px;
margin: 2px;
margin-bottom: 20px;
padding:5px;
text-align:left;
}

.sublinks_cell {
font-size: 12px;
background:#95b8e0;
}

.subheaders {
font-size: 16px;
font-weight: bold;
padding:10px;
margin:15px 0 0 15px;
vertical-align:bottom;
}

.age {
font-size: 9px;
}

.parentdeath {
border: thin solid #808080;
padding: 1px;
}

.source_citations {
display:none;
}

.footer {
font-size: 12px;
width: 99%;
direction: ltr;
caption-side: left;
text-align: center;
}

.contact_links {
text-align:center;
}

.hit-counter {
background: #000;
color: #FFF;
font-weight: bold;
}

.border1 {
border: solid black 1px;
}

.header_select {
font-size: 12px;
}

.theme_form, .lang_form {
margin-top:0;
font-size: 14px;
}

.theme_form option, .lang_form option, .color_form option {
margin:3px;
}

.selected-option {
background:#c8e7ff;
}

.favorites_form {
margin-top:1px;
font-size: 14px;
color:#FFF;
}

.help {
font-weight:700;
cursor:help;
}

.current_day {
font-weight:bold;
font-size:16px;
}

.cal_day {
float:left;
font-weight:bold;
}

.rtl_cal_day {
direction:rtl;
float:right;
color:blue;
font-weight:700;
}

.helpheader {
font-size: 16px;
font-weight: bold;
color:#000;
}

.helpstart {
font-size: 14px;
font-weight: bold;
color:blue;
text-decoration:none;
}

.helptext {
font-size: 12px;
color:#000;
}

.block {
color: #030303;
vertical-align: top;

}

.news_box {
padding: 3pt;
}

.news_title {
color: black;
font-size: 1.10em;
font-weight: bold;
}

.news_date {
color: black;
font-size: 12px;
margin-bottom: 12px;
}

.timeline_table {
}

#timeline_chart {
position: relative;
top: 50px;
left: 0px;
}

.person0 {
border:outset #999 1px;
vertical-align:top;
}

.person1 {
background:#afa;
border:outset #afa 1px;
vertical-align:top;
}

.person2 {
background:#faa;
border:outset #faa 1px;
border-width:1px;
font-size: 12px;
vertical-align:top;
}

.person3 {
background:#aad;
border:outset #55F 1px;
vertical-align:top;
}

.person4 {
background:#f55;
border:outset #f55 1px;
vertical-align:top;
}

.person5 {
background:#5f5;
border:outset #5f5 1px;
vertical-align:top;
}

.listlog {
line-height:20pt;
color:#555;
}

.barra {
color:#000;
font-size: 11px;
}

.blanco {
color:#fff;
font-size: 11px;
font-weight: bold;
}
input, button, textarea  {
border-width:1px;
font-family: tahoma,arial,helvetica,sans-serif;
font-size: 12px;
}

input, textarea {
padding-left: 3px;
padding-right: 3px;
}

select {
border:1px solid #ccc;
font-family: tahoma, arial, helvetica, sans-serif;
font-size: 12px;
}

form {
font-size: 12px;
}

h2 {
font-size: 18px;
font-weight: bold;
}

h4 {
font-size: 12px;
font-weight: bold;
}

.formField {
font-size: 12px;
}

.starredname {
text-decoration:underline;
}

.search_hit {
background:#FF0;
color:#000;
}

.title {
font-size: 20px;
vertical-align:middle;
}

.accesskeys {
width:1px;
height:1px;
overflow:hidden;
}

.topbottombar {
font-size: 12px;
font-weight: bold;
padding:4px;
text-align:center;
}

.subbar {
background:#fff;
border:1pt solid #ddd;
font-size: 11px;
padding:3px;
white-space:nowrap;
vertical-align:top;

}

.descriptionbox {
border: 1px solid #999;
font-size: 12px;
vertical-align: top;
white-space: nowrap;
padding: 3px;
}

.optionbox {
background-color: #ECF5FF;
border: 1px solid #84BEFF;
color: #006;
font: 11px tahoma, arial, helvetica, sans-serif;
padding: 3px;
vertical-align: top;
white-space: nowrap;
}

.vmiddle {
vertical-align: middle;
}

.rela {
opacity: 0.67;
}

#index .user_messages td {
border:1px #999 solid;
padding:2px;
}

.sex_image {
height:9px;
width:9px;
padding-left:3px;
padding-right:3px;
border:none;
vertical-align:middle;
}

fieldset {
padding: 30px;
margin:8px 8px 4px 8px;
}

fieldset ol, fieldset li {
margin:2px 0px 0px 5px;
}

div.blockhc a:hover {
background: transparent;
}

legend{
font-weight:bold;
}
.details_label {
font-weight:bold;
}

form .rtl {
text-align:right;
}

/* 											*/
/*	Standard PGV Markup						*/

.favmenuitem {
color:#FFF;
font-size: 11px;
font-weight: bold;
text-decoration:none;
padding:1px;
}

.favmenuitem a {
color:#FFF;
}

.favmenuitem_hover {
color:black;
font-size: 11px;
text-decoration:none;
padding:1px;
}

.favsubmenu {
color:#000;
text-decoration:none;
font-size: 11px;
text-align:center;
background:#ecf5ff;
border:solid #84beff 1px;
white-space:nowrap;
}

.favsubmenuitem a,.favsubmenuitem_selected a {
color:#000;
font-size: 11px;
text-decoration:none;
background:#ecf5ff;
white-space:nowrap;
text-align:left;
}

.favsubmenuitem_selected a {
background:aqua;
}

.favsubmenuitem_hover {
color:black;
font-size: 11px;
text-decoration:none;
background:#fff;
white-space:nowrap;
text-align:left;
}

.favsubmenuitem_hover a {
color:red;
font-size: 11px;
text-decoration:none;
background:#fff;
white-space:nowrap;
text-align:left;
}

.ltr {
text-align: left;
}

.rtl {
text-align:right;
direction: rtl; 
}

.width10 {width:10%;}
.width20 {width:20%;}
.width25 {width:25%;}
.width33 {width:33%;}
.width30 {width:30%;}
.width40 {width:40%;}
.width50 {width:50%;}
.width60 {width:60%;}
.width66 {width:66%;}
.width70 {width:70%;}
.width75 {width:75%;}
.width80 {width:80%;}
.width90 {width:90%;}
.width100 {width:100%;}

.font11 {
font-size:11px;
}

.font9 {
font-size:9px;
}

.pedigree_table {
margin: 0;
}

.messagebox {
background: #dfeeff;
}

/* Pending edits */
.change_new, .nameblue {
	border: solid blue 2px !important;
}

.change_old, .namered {
	color: black !important;
	text-decoration:line-through !important;
}

.note_details {
display: none;
}

a.showit {
position:relative;
z-index:24;
color:#000;
text-decoration:none;
}

a.showit:hover {
z-index:25;
background:#ffff9b;
cursor:crosshair;
}

a.showit span {
display: none;
}
/* ... */

